fix h3 align in about box

--- a/v4/css/style.css
+++ b/v4/css/style.css
@@ -70,6 +70,7 @@
     font-size: 35px;
     font-weight: bold;
     text-transform: capitalize;
+    text-align: center;
 }
 
 .about .info p {
